[gd_scene load_steps=92 format=2]

[ext_resource path="res://assets/boss/Character_sheet.png" type="Texture" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]
[ext_resource path="res://sound effects/boss/golem_death_sound.mp3" type="AudioStream" id=3]
[ext_resource path="res://sound effects/boss/golem_attack_sound.mp3" type="AudioStream" id=4]
[ext_resource path="res://sound effects/boss/golem_shot_sound.mp3" type="AudioStream" id=5]
[ext_resource path="res://sound effects/boss/foley_breeze_block_drop_on_hard_ground_003.mp3" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 700, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 100, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 200, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 300, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 400, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 500, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 600, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 700, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 800, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 900, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 100, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 200, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 300, 800, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 700, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 800, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 0, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 100, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 200, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 300, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 400, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 500, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 600, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 700, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 800, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 900, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 700, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 600, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 500, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 300, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 200, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 0, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 100, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 200, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 300, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 200, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 100, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 0, 700, 100, 100 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 200, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 300, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 500, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 600, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 700, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 0, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 100, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 200, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 300, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 400, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 500, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 600, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 0, 400, 100, 100 )

[sub_resource type="SpriteFrames" id=77]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "upgrade",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": false,
"name": "sleep2",
"speed": 3.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": false,
"name": "damage",
"speed": 4.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": false,
"name": "sleep",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": true,
"name": "melee_attack",
"speed": 5.0
} ]

[sub_resource type="Animation" id=78]
length = 1.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "start_walk"
} ]
}

[sub_resource type="Animation" id=79]
length = 1.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "create_bullet"
} ]
}

[sub_resource type="RectangleShape2D" id=80]
extents = Vector2( 21.3333, 25.9644 )

[sub_resource type="RectangleShape2D" id=81]
extents = Vector2( 21.062, 20.3778 )

[sub_resource type="CircleShape2D" id=82]
radius = 56.3343

[sub_resource type="RectangleShape2D" id=83]
extents = Vector2( 14.2151, 21.3333 )

[sub_resource type="RectangleShape2D" id=84]
extents = Vector2( 14.2538, 21.3333 )

[sub_resource type="RectangleShape2D" id=85]
extents = Vector2( 18.6764, 20.2836 )

[node name="Boss" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 0
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 77 )
animation = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 78 )
anims/range_attack = SubResource( 79 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.998871, -0.874011 )
shape = SubResource( 80 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.981364, -1.31639 )
shape = SubResource( 81 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 82 )

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 22.8912, 5.49065 )
shape = SubResource( 83 )

[node name="AttackDetector" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( 22.9262, 5.21549 )
shape = SubResource( 84 )

[node name="DamageTOPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageTOPlayer"]
position = Vector2( 0, -0.792806 )
shape = SubResource( 85 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 36.8639, -12.5149 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.4

[node name="Timer3" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="SoundDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SoundAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[node name="SoundShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="SoundDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="body_entered" from="DamageTOPlayer" to="." method="_on_DamageTOPlayer_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
